enable double qoute notation in podfile

--- a/spmready.xcodeproj/xcshareddata/xcschemes/pod2spm.xcscheme
+++ b/spmready.xcodeproj/xcshareddata/xcschemes/pod2spm.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "7F7BEF3D232C2C5B001781BB"
+               BuildableName = "spmreadytest.xctest"
+               BlueprintName = "spmreadytest"
+               ReferencedContainer = "container:spmready.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
@@ -50,6 +60,12 @@
             ReferencedContainer = "container:spmready.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "/Users/humann/git/satellite-app-ios/Podfile"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
